# loggraph

./: .gitignore  CHANGELOG.md  README.md  loggraph-shim.js  package.json  pyproject.toml
.auto/: checks.sh  log.jsonl  measure.sh  prompt.md
extensions/loggraph/: index.ts
fixtures/labeled_logs/: corpus.jsonl
fixtures/python_projects/service_app/: inventory.py  orders.py  users.py
scripts/: check
src/loggraph/: analyzer.py  cli.py  event_profile.py  events.py  indexer.py  models.py  profile.py  quality.py
src/loggraph/evaluation/: metrics.py  runner.py
src/loggraph/graph/: render.py  store.py
src/loggraph/logs/: parser.py  templates.py  traceback.py
src/loggraph/matchers/: locator.py
src/loggraph/parsers/: base.py  c_cpp_regex.py  go_regex.py  java_regex.py  kotlin_regex.py  python_ast.py  typescript_regex.py
tests/: test_core.py  test_core_unittest.py
